feat(): Clean Cache and ForexDataRepository, bump V2.2.0